--- a/week01/index.html
+++ b/week01/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Carlos Ruiz">
     <meta name="description" content="This page provides a description of myself, giving relevant information about me.">
     <title>WDD131: Dynamic Web Fundamentals - Carlos D. Ruiz</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="week01/styles/layout.css">
 </head>
 <body>
    <header>
@@ -25,11 +25,11 @@
            <h2>About Me</h2>
            <div class="about-content">
                <p>My name is Carlos Ruiz, I was born in Perú and live in Lima, the capital of Perú. I am currently working in the MTC as a teacher trainer. I am 22 years old and I love to learn new things.</p>
-               <img src="images/profile.jpg" alt="Carlos D. Ruiz">
+               <img src="styles/images/profile.jpg" alt="Carlos D. Ruiz">
            </div>
            <h3>Lima, Perú</h3>
            <div class="location-content">
-               <img src="images/lima.jpg" alt="Image of Lima">
+               <img src="styles/images/lima.jpg" alt="Image of Lima">
                <p>Lima is a beautiful city and the economic center of Peru. It boasts stunning beaches but also faces significant traffic congestion.</p>
            </div>
        </section>
@@ -50,6 +50,6 @@
        <p id="lastModified"></p>
    </footer>
 
-   <script src="script.js"></script>
+   <script src="styles/script.js"></script>
 </body>
 </html>
