--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
            <h2>About Me</h2>
            <div class="about-content">
                <p>My name is Carlos Ruiz, I was born in Perú and live in Lima, the capital of Perú. I am currently working in the MTC as a teacher trainer. I am 22 years old and I love to learn new things.</p>
-               <img src="styles/images/profile.jpg" alt="Carlos D. Ruiz">
+               <img src="week01/styles/images/profile.jpg" alt="Carlos D. Ruiz">
            </div>
            <h3>Lima, Perú</h3>
            <div class="location-content">
-               <img src="styles/images/lima.jpg" alt="Image of Lima">
+               <img src="week01/styles/images/lima.jpg" alt="Image of Lima">
                <p>Lima is a beautiful city and the economic center of Peru. It boasts stunning beaches but also faces significant traffic congestion.</p>
            </div>
        </section>
