--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
        <p id="lastModified"></p>
    </footer>
 
-   <script src="styles/script.js"></script>
+   <script src="week01/styles/script.js"></script>
 </body>
 </html>
