--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temples</title>
-    <link rel="stylesheet" href="teemples.css">
+    <link rel="stylesheet" href="temples.css">
     <link rel="stylesheet" href="temples-large.css" media="(min-width: 768px)">
 </head>
 <body>
